# notate

./: .gitignore  Makefile  README.md  notate.cabal  stack.yaml
app/: Main.hs
src/Notate/: Actions.hs  Client.hs  Core.hs  Dummy.hs  Exe.hs  Interpret.hs  Real.hs
